--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+#body {
+  height: 100vh;
+
+}
+
+#footer {
+  position: absolute !important;
+  bottom: 0 !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
