--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -1,8 +1,8 @@
 .container-div {
     min-height: 48px;
-    width: 100%;
     background-color: #ececec;
     border-radius: 8px;
     cursor: pointer;
+    margin:8px;
 }
 
